tests/fixtures/invalid/float_in_bytes.py
# Cannot use 'in' with Float and Bytes
x: bool = 1.0 in b"hello"
